tests/valid/boolean_constants.ar
fn main() {
    const a = true;
    const b = false;
    const c: bool = false;
    
    pass(&a, &b, &c);
    pass2(a);
}

fn pass(a: *const bool, b: *const bool, c: *const bool) {}
fn pass2(b: bool) {} 
