tests/invalid/use_type_as_symbol.ar
fn main()
{
    const u8: u8;
}
